# kwiecisty_zakatek_automation

./: .cache.sqlite  .env  .gitignore  7am_raport.py  closing_report.py  config.py  database.py  index.html  loyverse_api.py  pyproject.toml  receipts.db  sync_db.py  weather.py
.github/workflows/: ci.yaml
core/: calendar_events.py  database.py  loyverse_api.py  telegram_bot.py  weather.py
jobs/: 7am_raport.py  closing_report.py  cloud_push.py  retention_alert.py  sync_db.py
n8n_workflows/: basicBot.json
notebooks/: eda.ipynb
src/kwiaciarnia_monika/: analytics.py  calendar_events.py  database.py  logger.py  loyverse_api.py  weather.py
src/kwiaciarnia_monika/analytics/: churn.py
src/kwiaciarnia_monika/api/: loyverse.py
src/kwiaciarnia_monika/bots/: fb_bot.py  telegram_bot.py
src/kwiaciarnia_monika/db/: engine.py
