[project]
name = "projekt-loyverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loyverse",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "pytz>=2026.1.post1",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
]

[tool.uv.sources]
loyverse = { git = "https://github.com/filki/loyverse" }
